; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_vidioc_queryctrl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_vidioc_queryctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_queryctrl = type { i32 }
%struct.omap24xxcam_fh = type { %struct.omap24xxcam_device* }
%struct.omap24xxcam_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_queryctrl*)* @vidioc_queryctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_queryctrl(%struct.file* %0, i8* %1, %struct.v4l2_queryctrl* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_queryctrl*, align 8
  %7 = alloca %struct.omap24xxcam_fh*, align 8
  %8 = alloca %struct.omap24xxcam_device*, align 8
  %9 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_queryctrl* %2, %struct.v4l2_queryctrl** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.omap24xxcam_fh*
  store %struct.omap24xxcam_fh* %11, %struct.omap24xxcam_fh** %7, align 8
  %12 = load %struct.omap24xxcam_fh*, %struct.omap24xxcam_fh** %7, align 8
  %13 = getelementptr inbounds %struct.omap24xxcam_fh, %struct.omap24xxcam_fh* %12, i32 0, i32 0
  %14 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %13, align 8
  store %struct.omap24xxcam_device* %14, %struct.omap24xxcam_device** %8, align 8
  %15 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %8, align 8
  %16 = getelementptr inbounds %struct.omap24xxcam_device, %struct.omap24xxcam_device* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.v4l2_queryctrl*, %struct.v4l2_queryctrl** %6, align 8
  %19 = call i32 @vidioc_int_queryctrl(i32 %17, %struct.v4l2_queryctrl* %18)
  store i32 %19, i32* %9, align 4
  %20 = load i32, i32* %9, align 4
  ret i32 %20
}

declare dso_local i32 @vidioc_int_queryctrl(i32, %struct.v4l2_queryctrl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
